--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <Text style="font-size: 80px; margin-right: 20px;">I am</Text>
                 <Text style="font-size: 80px ; color: #FFA200;">MUKUL KUMAR</Text>
             </div>
-            <Text style="font-size: 30px; font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 100;">Technlogy is best when it bring people together</Text>
+            <Text style="font-size: 30px; font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 100;">Creating Ideas into Innovations</Text>
         </intro>
         <img class="cartoonized" src="cartoonized.png">
     </div>
@@ -63,11 +63,26 @@
         </div>
         <div class="about">
             <p>
-                Hello! My name is Mukul Kumar. I am a third-year undergraduate student at IIT Jodhpur. I am a nice fun and friendly person who is trying to find the real meaning of life. Since my childhood, I always wanted to become an engineer because Technology, Innovation and Creation fascinate me. I always try to learn new things and I am a dancer too not a professional but know how to go with the flow and have fun. According to me giving happiness to others and helping each other is the only thing which can give you peace. With all knowledge and skill, I want to make this world a better place because I feel knowledge is a waste if it is not helping society. Somewhere in my heart I believe I am born to do something big and to create history. 
+                Hello! My name is Mukul Kumar. I am a third-year
+                undergraduate student at IIT Jodhpur. I am a nice fun
+                and friendly person who is trying to find the real 
+                meaning of life. Since my childhood, I always wanted to
+                become an engineer because Technology, Innovation and
+                Creation fascinate me. I always try to learn new things
+                and I am a dancer too not a professional but know how
+                to go with the flow and have fun. According to me giving
+                happiness to others and helping each other is the only 
+                thing which can give you peace. With all knowledge and
+                skill, I want to make this world a better place because
+                I feel knowledge is a waste if it is not helping society.
+                Somewhere in my heart I believe I am born to do something
+                big and to create history. 
             </p>
             <a class="tab" href="#">Say hello</a>
         </div>
     </div>
+
+    <div class="page3">
+    </div>
     </body>
 </html>
-
