--- a/index.html
+++ b/index.html
@@ -83,6 +83,40 @@
     </div>
 
     <div class="page3">
+      <div>
+          <Text style="font-size: 90px; font-family: Geometr415 Blk BT;margin-top: 15px; margin-bottom:15px;">Projects</Text>
+          <line></line>
+      </div>
+      <div class="proorder" >
+          <div>
+              <img src="instabot2x.png">
+              <p>
+                <Text>Instagram Relation Bot</Text>
+                Instagram is one of the most used social networking sites.
+                But I wanted to find my connection to a particular person 
+                so that I can connect with that specific person by using
+                my connection. To do this I have made a python program using 
+                AI algorithm, Depth limit search ...............more 
+              </p>
+          </div>
+          <div>
+              <p>
+                <Text>Genetreat - React Native App</Text>
+                Gene therapy is one of the methods of treating cancer but this process is new due to which a doctor needs professional help which leads to wasting time which a cancer patient can’t afford. So by using the knowledge of an expert (Thanks to Dr. Siddharth Srivastava) we made a mobile app that can assist the doctor to choose the right type of cancer and treatment for the same. As our target is to reach maximum doctors, we used a Javascript framework React Native with which we can make a react native for android as well as ios ..............more
+              </p>
+              <img src="splash@2x.png" style="height: 65vh;">
+          </div>
+          <div>
+              <img src="speechtranslator2x.png">
+              <p>
+                <Text>Speech Translator</Text>
+                There so many languages in the world and one cannot learn all of them. But people do get the need to know what one is saying or want to say therefore I made the program using python and some of its libraries which can translate the speech of the people ..............more
+              </p>
+          </div>
+          <a class="tab" style="align-self: center;" href="#">more</a>
+        </div>    
     </div>
+
+    
     </body>
 </html>
