--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div class="page3">
       <div>
-          <Text style="font-size: 90px; font-family: Geometr415 Blk BT;margin-top: 15px; margin-bottom:15px;">Projects</Text>
+          <Text style="font-size: 90px; font-family: Geometr415 Blk BT;margin-top: 15px;">Projects</Text>
           <line></line>
       </div>
       <div class="proorder" >
@@ -116,7 +116,44 @@
           <a class="tab" style="align-self: center;" href="#">more</a>
         </div>    
     </div>
+    <div class="page4">   
+      <div class="wkheading">
+        <Text style="font-size: 90px; font-family: Geometr415 Blk BT; ">Work</Text>
+        <line></line>
+      </div> 
+      <div class="apporder">
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="460.42" height="163" viewBox="0 0 460.42 163">
+            <g id="Group_129" data-name="Group 129" transform="translate(-1957 -6033)">
+              <path id="Path_40" data-name="Path 40" d="M0,0H319.207L460.42,81.774,319.207,163H0Z" transform="translate(1957 6033)"/>
+              <path id="Path_39" data-name="Path 39" d="M0,0H400L293.27,80.333,400,163H0Z" transform="translate(1957 6033)" fill="#0b4c9c"/>
+            </g>
+          </svg>
+            <Text style="font-size: 50px; font-family: showcard gothic; color:#fff;position: absolute; left :100px ">APP</Text>
+            <img src="apdd.png" alt="app">
+            <Text style="font-size: 30px; font-family: showcard gothic;color:#fff; position: absolute; right :30px; z-index: 3; ">DEVELOPMENT</Text>
+            <svg xmlns="http://www.w3.org/2000/svg" style="transform:rotate(180deg)" width="460.42" height="163" viewBox="0 0 460.42 163">
+              <g id="Group_129" data-name="Group 129" transform="translate(-1957 -6033)">
+                <path id="Path_40" data-name="Path 40" d="M0,0H319.207L460.42,81.774,319.207,163H0Z" transform="translate(1957 6033)"/>
+                <path id="Path_39" data-name="Path 39" d="M0,0H400L293.27,80.333,400,163H0Z" transform="translate(1957 6033)" fill="#0b4c9c"/>
+              </g>
+            </svg>
+        </div>
+        <div class="uiorder">
+          <div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="530.232" height="305.394" viewBox="0 0 530.232 305.394">
+                <g id="Group_131" data-name="Group 131" transform="translate(-100 -6318)">
+                  <circle id="Ellipse_9" data-name="Ellipse 9" cx="152.5" cy="152.5" r="152.5" transform="translate(100 6318)" fill="#000541"/>
+                  <path id="Path_6" data-name="Path 6" d="M152.7,0A152.7,152.7,0,1,1,0,152.7,152.7,152.7,0,0,1,152.7,0Z" transform="translate(324.839 6318)" fill="#5e8255"/>
+                </g>
+              </svg>
+              <p style="font-size: 65px; font-family: showcard gothic; color:#fff;position: absolute; left :230px; text-align: center">UI/UX<br> Design</p>
+        </div>
+        <img src="uix2.png" alt="ui/ux">
 
+        </div>
+      </div>
+    </div>
     
     </body>
 </html>
