--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@
           <a class="tab" style="align-self: center;" href="#">more</a>
         </div>    
     </div>
+
     <div class="page4">   
       <div class="wkheading">
         <Text style="font-size: 90px; font-family: Geometr415 Blk BT; ">Work</Text>
         <line></line>
-      </div> 
+      </div>
+
       <div class="apporder">
         <div>
           <svg xmlns="http://www.w3.org/2000/svg" width="460.42" height="163" viewBox="0 0 460.42 163">
@@ -139,6 +141,7 @@
               </g>
             </svg>
         </div>
+
         <div class="uiorder">
           <div>
               <svg xmlns="http://www.w3.org/2000/svg" width="530.232" height="305.394" viewBox="0 0 530.232 305.394">
@@ -148,12 +151,58 @@
                 </g>
               </svg>
               <p style="font-size: 65px; font-family: showcard gothic; color:#fff;position: absolute; left :230px; text-align: center">UI/UX<br> Design</p>
+          </div>
+          <img src="uix2.png" alt="ui/ux">
         </div>
-        <img src="uix2.png" alt="ui/ux">
 
+        <div class="webd">
+          <img src="lapy.png" alt="webd">
+          <div>
+            <p><Text style="font-size: 130px; color: #180D50">WEB</Text><br> DEVELOPMENT</p>    
+            <svg xmlns="http://www.w3.org/2000/svg" width="300" height="25" viewBox="0 0 300 25">
+              <defs>
+                <filter id="f1" x="0" y="0">
+                  <feGaussianBlur in="SourceGraphic" stdDeviation="100" />
+                </filter>
+              </defs>
+              <ellipse id="Ellipse_10" data-name="Ellipse 10" cx="150" cy="12.5" rx="150" ry="12.5" fill="#CCCCCC"/>
+            </svg>
+        </div>
         </div>
       </div>
     </div>
-    
+
+    <div class="pcbd">
+      <svg xmlns="http://www.w3.org/2000/svg" width="516.438" height="555.946" viewBox="0 0 516.438 555.946">
+        <g id="Group_132" data-name="Group 132" transform="translate(1.991 -8479.333)">
+          <path id="Path_31" data-name="Path 31" d="M424.373-.1c207.872,0,423.542,57.788,423.542,185.857-12,54.667-180.069,60.261-318.466,78.171C446.185,274.7,378.175,279.956,373.339,273.9,352.057,247.229,735.5,227.048,788.984,173.308c32.59-32.743-242.889-137.526-322.4-111.551-80.041,15.065-96.886,198.215-117.6,309.1-9.992,53.477-14.381,92.7-14.423,92.819.129-.378,0-146.092,0-222.421,0-19.468.016-55.7.032-94.407.027-69.678.051-147.158-.032-146.951.993-.261-18.841-.1,37.015-.028C384.511-.112,401.741-.1,424.373-.1Z" transform="translate(-333.915 8479.576)"/>
+          <rect id="Rectangle_29" data-name="Rectangle 29" width="116" height="92.586" rx="29" transform="translate(186.2 8836)"/>
+          <rect id="Rectangle_30" data-name="Rectangle 30" width="102" height="59" rx="29" transform="translate(208.2 8854.584)" fill="#f3f3f3"/>
+          <path id="Path_14" data-name="Path 14" d="M21.29,0H69.6C81.358,0,90.89,6.947,90.89,15.517v21.9L75.572,46.8,90.89,55V76.986c0,8.57-9.532,15.517-21.29,15.517H21.29C9.532,92.5,0,85.556,0,76.986V15.517C0,6.947,9.532,0,21.29,0Z" transform="translate(423.333 8836.439)"/>
+          <path id="Path_15" data-name="Path 15" d="M24.522,0h17.92C55.986,0,66.965,6.041,66.965,13.494v.519c0,7.453-10.979,13.494-24.523,13.494H12.606C-.938,27.507,0,21.466,0,14.013v-.519C0,6.041,10.978,0,24.522,0Z" transform="translate(435.299 8849.801)" fill="#f3f3f3"/>
+          <path id="Path_16" data-name="Path 16" d="M10.956,0H42.39c13.53,0,24.5,6.058,24.5,13.532v1.041c0,7.474-10.968,13.532-24.5,13.532h-17.9c-13.53,0-24.5-6.058-24.5-13.532V13.532C-.012,6.058-2.574,0,10.956,0Z" transform="translate(435.375 8888.281)" fill="#f3f3f3"/>
+          <g id="Group_105" data-name="Group 105" transform="translate(27.619 8974.037)">
+            <path id="Path_22" data-name="Path 22" d="M9.565-1.678h29.3A10.166,10.166,0,0,1,49.032,8.488V46.161A10.166,10.166,0,0,1,38.866,56.326H9.565c-2.555,0-8.249,1.671-10.166,0-2.009-1.748,0-7.106,0-10.166V-1.678C-.6-7.292,3.951-1.678,9.565-1.678Z" transform="translate(1.874 4.173)" fill="#007f00"/>
+            <path id="Path_21" data-name="Path 21" d="M14.348,0H37.98C45.9,0,52.327,7.874,52.327,13.489H14.348V24.042h37.98V33.8H14.348v11.56h37.98C52.327,50.976,45.9,58,37.98,58H14.348C6.424,58,0,53.453,0,47.838V10.166C0,4.551,6.424,0,14.348,0Z" transform="translate(96.381 0.701)" fill="#007f00"/>
+            <path id="Path_20" data-name="Path 20" d="M14.561,0H30.835C38.877,0,45.4,4.551,45.4,10.166H14.561L45.4,47.838C45.4,53.453,38.877,58,30.835,58H14.561C6.519,58,0,53.453,0,47.838H30.835L0,10.166C0,4.551,6.519,0,14.561,0Z" transform="translate(194.381 0.701)" fill="#007f00"/>
+            <rect id="Rectangle_38" data-name="Rectangle 38" width="15" height="58" rx="7.5" transform="translate(284.381 0.676)" fill="#007f00"/>
+            <path id="Path_19" data-name="Path 19" d="M10.166,0h29.9A10.166,10.166,0,0,1,50.23,10.166H13.216V47.838H36.539V36.889L23.953,29.08H50.23V47.838A10.166,10.166,0,0,1,40.065,58h-29.9A10.166,10.166,0,0,1,0,47.838V10.166A10.166,10.166,0,0,1,10.166,0Z" transform="translate(345.381 2.495)" fill="#007f00"/>
+            <path id="Path_18" data-name="Path 18" d="M36.249,37.707V0c5.08,0,9.2,4.551,9.2,10.166V58c0,5.614-31.169-25.178-36.249-25.178V58C4.118,58,0,53.453,0,47.838V2.568C0-3.047,31.169,37.707,36.249,37.707Z" transform="translate(441.381 0.701)" fill="#007f00"/>
+            <rect id="Rectangle_39" data-name="Rectangle 39" width="31" height="38" rx="8" transform="translate(9.493 12.676)" fill="#f3f3f3"/>
+          </g>
+        </g>
+      </svg>
+      <img src="pcbd.png" alt="PCBd">
+      </div>
+
+      <div class="spark">
+        <img src="Spark filter.png" alt="SparkAR filter">
+        <img src="Rke cartoon.png" alt="cartoonized photo of roorkee">
+      </div>
+
+    </div>
+    <div class="page5">
+
+    </div>
     </body>
 </html>
