PCBd logo improved

--- a/index.html
+++ b/index.html
@@ -173,26 +173,33 @@
     </div>
 
     <div class="pcbd">
-      <svg xmlns="http://www.w3.org/2000/svg" width="516.438" height="555.946" viewBox="0 0 516.438 555.946">
-        <g id="Group_132" data-name="Group 132" transform="translate(1.991 -8479.333)">
-          <path id="Path_31" data-name="Path 31" d="M424.373-.1c207.872,0,423.542,57.788,423.542,185.857-12,54.667-180.069,60.261-318.466,78.171C446.185,274.7,378.175,279.956,373.339,273.9,352.057,247.229,735.5,227.048,788.984,173.308c32.59-32.743-242.889-137.526-322.4-111.551-80.041,15.065-96.886,198.215-117.6,309.1-9.992,53.477-14.381,92.7-14.423,92.819.129-.378,0-146.092,0-222.421,0-19.468.016-55.7.032-94.407.027-69.678.051-147.158-.032-146.951.993-.261-18.841-.1,37.015-.028C384.511-.112,401.741-.1,424.373-.1Z" transform="translate(-333.915 8479.576)"/>
-          <rect id="Rectangle_29" data-name="Rectangle 29" width="116" height="92.586" rx="29" transform="translate(186.2 8836)"/>
-          <rect id="Rectangle_30" data-name="Rectangle 30" width="102" height="59" rx="29" transform="translate(208.2 8854.584)" fill="#f3f3f3"/>
-          <path id="Path_14" data-name="Path 14" d="M21.29,0H69.6C81.358,0,90.89,6.947,90.89,15.517v21.9L75.572,46.8,90.89,55V76.986c0,8.57-9.532,15.517-21.29,15.517H21.29C9.532,92.5,0,85.556,0,76.986V15.517C0,6.947,9.532,0,21.29,0Z" transform="translate(423.333 8836.439)"/>
-          <path id="Path_15" data-name="Path 15" d="M24.522,0h17.92C55.986,0,66.965,6.041,66.965,13.494v.519c0,7.453-10.979,13.494-24.523,13.494H12.606C-.938,27.507,0,21.466,0,14.013v-.519C0,6.041,10.978,0,24.522,0Z" transform="translate(435.299 8849.801)" fill="#f3f3f3"/>
-          <path id="Path_16" data-name="Path 16" d="M10.956,0H42.39c13.53,0,24.5,6.058,24.5,13.532v1.041c0,7.474-10.968,13.532-24.5,13.532h-17.9c-13.53,0-24.5-6.058-24.5-13.532V13.532C-.012,6.058-2.574,0,10.956,0Z" transform="translate(435.375 8888.281)" fill="#f3f3f3"/>
-          <g id="Group_105" data-name="Group 105" transform="translate(27.619 8974.037)">
-            <path id="Path_22" data-name="Path 22" d="M9.565-1.678h29.3A10.166,10.166,0,0,1,49.032,8.488V46.161A10.166,10.166,0,0,1,38.866,56.326H9.565c-2.555,0-8.249,1.671-10.166,0-2.009-1.748,0-7.106,0-10.166V-1.678C-.6-7.292,3.951-1.678,9.565-1.678Z" transform="translate(1.874 4.173)" fill="#007f00"/>
-            <path id="Path_21" data-name="Path 21" d="M14.348,0H37.98C45.9,0,52.327,7.874,52.327,13.489H14.348V24.042h37.98V33.8H14.348v11.56h37.98C52.327,50.976,45.9,58,37.98,58H14.348C6.424,58,0,53.453,0,47.838V10.166C0,4.551,6.424,0,14.348,0Z" transform="translate(96.381 0.701)" fill="#007f00"/>
-            <path id="Path_20" data-name="Path 20" d="M14.561,0H30.835C38.877,0,45.4,4.551,45.4,10.166H14.561L45.4,47.838C45.4,53.453,38.877,58,30.835,58H14.561C6.519,58,0,53.453,0,47.838H30.835L0,10.166C0,4.551,6.519,0,14.561,0Z" transform="translate(194.381 0.701)" fill="#007f00"/>
-            <rect id="Rectangle_38" data-name="Rectangle 38" width="15" height="58" rx="7.5" transform="translate(284.381 0.676)" fill="#007f00"/>
-            <path id="Path_19" data-name="Path 19" d="M10.166,0h29.9A10.166,10.166,0,0,1,50.23,10.166H13.216V47.838H36.539V36.889L23.953,29.08H50.23V47.838A10.166,10.166,0,0,1,40.065,58h-29.9A10.166,10.166,0,0,1,0,47.838V10.166A10.166,10.166,0,0,1,10.166,0Z" transform="translate(345.381 2.495)" fill="#007f00"/>
-            <path id="Path_18" data-name="Path 18" d="M36.249,37.707V0c5.08,0,9.2,4.551,9.2,10.166V58c0,5.614-31.169-25.178-36.249-25.178V58C4.118,58,0,53.453,0,47.838V2.568C0-3.047,31.169,37.707,36.249,37.707Z" transform="translate(441.381 0.701)" fill="#007f00"/>
-            <rect id="Rectangle_39" data-name="Rectangle 39" width="31" height="38" rx="8" transform="translate(9.493 12.676)" fill="#f3f3f3"/>
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="516.46" height="555.823" viewBox="0 0 516.46 555.823">
+        <defs>
+          <linearGradient id="linear-gradient" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
+            <stop offset="0" stop-color="#007500"/>
+            <stop offset="1" stop-color="#003b00"/>
+          </linearGradient>
+        </defs>
+        <g id="Group_136" data-name="Group 136" transform="translate(2 -8479.333)">
+          <g id="Group_132" data-name="Group 132" transform="translate(-0.009)">
+            <path id="Path_31" data-name="Path 31" d="M424.373-.1c207.872,0,423.542,57.788,423.542,185.857-12,54.667-180.069,60.261-318.466,78.171C446.185,274.7,378.175,279.956,373.339,273.9,352.057,247.229,735.5,227.048,788.984,173.308c32.59-32.743-242.889-137.526-322.4-111.551-80.041,15.065-96.886,198.215-117.6,309.1-9.992,53.477-14.381,92.7-14.423,92.819.129-.378,0-146.092,0-222.421,0-19.468.016-55.7.032-94.407.027-69.678.051-147.158-.032-146.951.993-.261-18.841-.1,37.015-.028C384.511-.112,401.741-.1,424.373-.1Z" transform="translate(-333.915 8479.576)"/>
           </g>
+          <path id="Path_41" data-name="Path 41" d="M301.766,8859.406s-1.2-21.642-25.247-22.844-66.124,0-66.124,0-22.242,1.8-23.444,26.45,0,39.073,0,39.073-3.006,25.247,23.444,26.449,66.124,0,66.124,0,24.045-7.215,25.247-23.444-2.4,4.208-18.635,4.81-52.9,0-52.9,0-21.039-1.2-19.837-26.449,19.837-27.652,19.837-27.652,31.86-1.2,52.9,0S301.766,8859.406,301.766,8859.406Z" transform="translate(-4 0.972)"/>
+          <g id="Group_134" data-name="Group 134" transform="translate(100.276)">
+            <path id="Path_42" data-name="Path 42" d="M421.991,8850.99c-.6,15.028,0,63.118,0,63.118s-1.8,15.028,21.039,15.028h55.3s14.039-3.607,15.629-21.641-15.629-26.45-15.629-26.45,18.034-10.82,15.629-26.449-15.629-17.433-15.629-17.433h-55.3S422.592,8835.962,421.991,8850.99Z" transform="translate(-100 -0.142)"/>
+            <path id="Path_43" data-name="Path 43" d="M340.839,8849.187h51.7s9.618,8.416,0,19.236c-4.213,4.739-14.653,7.9-25.331,10.016a227.971,227.971,0,0,1-26.366,3.411,147.71,147.71,0,0,0,23.621,4.769c13.152,1.432,27.441,3.107,28.076,5.646,0,0,10.82,5.012,0,20.642-7.815,2.405-51.7,0-51.7,0Z" transform="translate(0 1)" fill="#f3f3f3"/>
+          </g>
+          <g id="Group_135" data-name="Group 135" transform="translate(-15.991 -97)">
+            <path id="Path_44" data-name="Path 44" d="M.381,3.108H41.806s8.761.226,8.761,10.559V49.835s.9,8.986-7.413,9.885-42.773,0-42.773,0V3.108Z" transform="translate(43.61 9072.037)" fill="url(#linear-gradient)"/>
+            <path id="Path_45" data-name="Path 45" d="M.381,3.108H27.039s5.638.15,5.638,7.038V34.254s.578,5.99-4.771,6.589-27.525,0-27.525,0V3.108Z" transform="translate(52.721 9081.604)" fill="#f3f3f3"/>
+          </g>
+          <path id="Path_47" data-name="Path 47" d="M176.124,8985.929s-1.348-11.255-13.254-11.255H135.912s-12.131.675-12.131,8.537v41.11s1.123,7.863,12.131,8.313,26.958,0,26.958,0,13.254.651,13.254-10.806c0-.449-42.976,0-42.976,0v-12.457h42.976v-9.884H133.148v-13.559Z" transform="translate(-6.281 1.826)" fill="url(#linear-gradient)"/>
+          <path id="Path_48" data-name="Path 48" d="M236.779,8985.008h30.327s1.123-9.436-13.03-9.885-19.544,0-19.544,0-12.356,1.123-12.8,9.885l31,37.517h-31s-1.8,8.761,12.8,9.21c6.556.2,13.341.605,19.544,0,6.99-.679,12.782-2.9,13.03-9.21Z" transform="translate(-11.157 2.576)" fill="url(#linear-gradient)"/>
+          <path id="Path_49" data-name="Path 49" d="M297.978,8985.834H314.6v36.174H297.978s-3.74,9.946,21.735,9.946,22.163-9.946,22.163-9.946H324.789v-36.174h17.087s2.8-10.669-22.163-10.415C293.454,8975.419,297.978,8985.834,297.978,8985.834Z" transform="translate(-2.181 1)" fill="url(#linear-gradient)"/>
+          <path id="Path_50" data-name="Path 50" d="M423.141,8986.343s-.255-9.68-10.19-9.935-30.825,0-30.825,0-8.916-.511-9.171,9.935,0,37.449,0,37.449.255,10.189,9.171,10.7,29.806,0,29.806,0,10.954,1.274,11.209-10.7,0-18.088,0-18.088h-25.73l15.54,7.8v10.291H382.127v-37.449Z" transform="translate(6.658)" fill="url(#linear-gradient)"/>
+          <path id="Path_51" data-name="Path 51" d="M477.913,9032.963V8997.8l35.665,35.164v-47.384s1.274-10.954-8.407-10.7v37.958L469,8974.879s-.255,37.958,0,46.365S477.913,9032.963,477.913,9032.963Z" transform="translate(0.617 1)" fill="url(#linear-gradient)"/>
         </g>
       </svg>
-      
       
       <img src="pcbd.png" alt="PCBd">
       </div>
