--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <div class="page1">    
         <intro class="intro">
-            <Text style="font-size: 40px;">Hey There!</Text>
+            <Text style="font-size: 4vmin;">Hey There!</Text>
             <div>
-                <Text style="font-size: 80px; margin-right: 20px;">I am</Text>
-                <Text style="font-size: 80px ; color: #FFA200;">MUKUL KUMAR</Text>
+                <Text style="font-size: 8vmin; margin-right: 20px;">I am</Text>
+                <Text style="font-size: 8vmin ; color: #FFA200;">MUKUL KUMAR</Text>
             </div>
-            <Text style="font-size: 30px; font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 100;">Creating Ideas into Innovations</Text>
+            <Text style="font-size: 2.5vmin; font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 100;">Creating Ideas into Innovations</Text>
         </intro>
         <img class="cartoonized" src="cartoonized.png">
     </div>
 
-    <div class="page2" id="about">
+    <!-- <div class="page2" id="about">
         <div class="abtlogo">
             <Text style="font-size: 90px; font-family: Geometr415 Blk BT;">About Me</Text>
             <svg  xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 734.528 730.921">
@@ -285,7 +285,7 @@
             <img src="linkedin.png" alt="linkedin"  style=" position: absolute; top:78.2px; left:294.2px">
           </a>  
         </div>
-    </div>
+    </div> -->
     </body>
 </html>
 
