--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <intro class="intro">
             <Text style="font-size: 4vmin;">Hey There!</Text>
             <div>
-                <Text style="font-size: 8vmin; margin-right: 20px;">I am</Text>
+                <Text style="font-size: 8vmin; margin-right: 2vmin;">I am</Text>
                 <Text style="font-size: 8vmin ; color: #FFA200;">MUKUL KUMAR</Text>
             </div>
             <Text style="font-size: 2.5vmin; font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 100;">Creating Ideas into Innovations</Text>
