--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     </header>
     <div class="page1">    
         <intro class="intro">
-            <Text style="font-size: 4vmin;">Hey There!</Text>
+            <Text style="font-size: 2vmax;">Hey There!</Text>
             <div>
-                <Text style="font-size: 8vmin; margin-right: 2vmin;">I am</Text>
-                <Text style="font-size: 8vmin ; color: #FFA200;">MUKUL KUMAR</Text>
+                <Text style="font-size: 4vmax; margin-right: 2vmin;">I am</Text>
+                <Text style="font-size: 4vmax ; color: #FFA200;">MUKUL KUMAR</Text>
             </div>
-            <Text style="font-size: 2.5vmin; font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 100;">Creating Ideas into Innovations</Text>
+            <Text style="font-size: 1.5vmax; font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 100;">Creating Ideas into Innovations</Text>
         </intro>
         <img class="cartoonized" src="cartoonized.png">
     </div>
 
-    <!-- <div class="page2" id="about">
+    <div class="page2" id="about">
         <div class="abtlogo">
-            <Text style="font-size: 90px; font-family: Geometr415 Blk BT;">About Me</Text>
+            <Text style="font-size: 9vmin; font-family: Geometr415 Blk BT;">About Me</Text>
             <svg  xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 734.528 730.921">
                 <defs>
                   <style>
@@ -81,7 +81,7 @@
             <a class="tab" href="https://mail.google.com/mail/?view=cm&fs=1&to=mukulkumar258@gmail.com">Say hello</a>
         </div>
     </div>
-
+<!-- 
     <div class="page3" id="project">
       <div>
           <Text style="font-size: 90px; font-family: Geometr415 Blk BT;margin-top: 15px;">Projects</Text>
