--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="page2" id="about">
         <div class="abtlogo">
-            <Text style="font-size: 9vmin; font-family: Geometr415 Blk BT;">About Me</Text>
+            <Text>About Me</Text>
             <svg  xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 734.528 730.921">
                 <defs>
                   <style>
