--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <intro class="intro">
             <Text style="font-size: 2vmax;">Hey There!</Text>
             <div>
+<!--------------------------------text font remaining-------------------------------------------------------->              
+<!--------------------------------text font remaining-------------------------------------------------------->              
                 <Text style="font-size: 4vmax; margin-right: 2vmin;">I am</Text>
                 <Text style="font-size: 4vmax ; color: #FFA200;">MUKUL KUMAR</Text>
             </div>
@@ -81,10 +83,10 @@
             <a class="tab" href="https://mail.google.com/mail/?view=cm&fs=1&to=mukulkumar258@gmail.com">Say hello</a>
         </div>
     </div>
-<!-- 
+
     <div class="page3" id="project">
-      <div>
-          <Text style="font-size: 90px; font-family: Geometr415 Blk BT;margin-top: 15px;">Projects</Text>
+      <div class="proheading">
+          <Text>Projects</Text>
           <line></line>
       </div>
       <div class="proorder" >
@@ -104,7 +106,7 @@
                 <Text>Genetreat - React Native App</Text>
                 Gene therapy is one of the methods of treating cancer but this process is new due to which a doctor needs professional help which leads to wasting time which a cancer patient can’t afford. So by using the knowledge of an expert (Thanks to Dr. Siddharth Srivastava) we made a mobile app that can assist the doctor to choose the right type of cancer and treatment for the same. As our target is to reach maximum doctors, we used a Javascript framework React Native with which we can make a react native for android as well as ios ..............more
               </p>
-              <img src="splash@2x.png" style="height: 65vh;">
+              <img src="splash@2x.png" style="height: 35vw;">
           </div>
           <div>
               <img src="speechtranslator2x.png">
@@ -117,7 +119,7 @@
         </div>    
     </div>
 
-    <div class="page4" id="work">   
+    <!-- <div class="page4" id="work">   
       <div class="wkheading">
         <Text style="font-size: 90px; font-family: Geometr415 Blk BT; ">Work</Text>
         <line></line>
