--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                 AI algorithm, Depth limit search ...............more 
               </p>
           </div>
-          <div>
+          <div class="splash" >
               <p>
                 <Text>Genetreat - React Native App</Text>
                 Gene therapy is one of the methods of treating cancer but this process is new due to which a doctor needs professional help which leads to wasting time which a cancer patient can’t afford. So by using the knowledge of an expert (Thanks to Dr. Siddharth Srivastava) we made a mobile app that can assist the doctor to choose the right type of cancer and treatment for the same. As our target is to reach maximum doctors, we used a Javascript framework React Native with which we can make a react native for android as well as ios ..............more
               </p>
-              <img src="splash@2x.png" style="height: 35vw;">
+              <img src="splash@2x.png"">
           </div>
           <div>
               <img src="speechtranslator2x.png">
