--- a/index.html
+++ b/index.html
@@ -119,24 +119,26 @@
         </div>    
     </div>
 
-    <!-- <div class="page4" id="work">   
+    <div class="page4" id="work">   
       <div class="wkheading">
-        <Text style="font-size: 90px; font-family: Geometr415 Blk BT; ">Work</Text>
+        <Text>Work</Text>
         <line></line>
       </div>
 
       <div class="apporder">
-        <div>
-          <svg xmlns="http://www.w3.org/2000/svg" width="460.42" height="163" viewBox="0 0 460.42 163">
+        <img src="apdd.png" alt="app">
+        <div> 
+          <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 460.42 163">
             <g id="Group_129" data-name="Group 129" transform="translate(-1957 -6033)">
               <path id="Path_40" data-name="Path 40" d="M0,0H319.207L460.42,81.774,319.207,163H0Z" transform="translate(1957 6033)"/>
               <path id="Path_39" data-name="Path 39" d="M0,0H400L293.27,80.333,400,163H0Z" transform="translate(1957 6033)" fill="#0b4c9c"/>
             </g>
           </svg>
-            <Text style="font-size: 50px; font-family: showcard gothic; color:#fff;position: absolute; left :100px ">APP</Text>
-            <img src="apdd.png" alt="app">
-            <Text style="font-size: 30px; font-family: showcard gothic;color:#fff; position: absolute; right :30px; z-index: 3; ">DEVELOPMENT</Text>
-            <svg xmlns="http://www.w3.org/2000/svg" style="transform:rotate(180deg)" width="460.42" height="163" viewBox="0 0 460.42 163">
+          <div>
+            <Text>APP</Text>
+            <Text>DEVELOPMENT</Text>
+          </div>
+            <svg xmlns="http://www.w3.org/2000/svg" style="transform:rotate(180deg)"  viewBox="0 0 460.42 163">
               <g id="Group_129" data-name="Group 129" transform="translate(-1957 -6033)">
                 <path id="Path_40" data-name="Path 40" d="M0,0H319.207L460.42,81.774,319.207,163H0Z" transform="translate(1957 6033)"/>
                 <path id="Path_39" data-name="Path 39" d="M0,0H400L293.27,80.333,400,163H0Z" transform="translate(1957 6033)" fill="#0b4c9c"/>
@@ -144,7 +146,8 @@
             </svg>
         </div>
 
-        <div class="uiorder">
+      </div>
+        <!-- <div class="uiorder">
           <div>
               <svg xmlns="http://www.w3.org/2000/svg" width="530.232" height="305.394" viewBox="0 0 530.232 305.394">
                 <g id="Group_131" data-name="Group 131" transform="translate(-100 -6318)">
@@ -211,11 +214,11 @@
         <img src="Rke cartoon.png" alt="cartoonized photo of roorkee">
       </div>
 
-    </div>
+    </div> -->
 
 
 
-    <div class="page5" id="contact">
+    <!-- <div class="page5" id="contact">
         <div class="ul">
           <div class="conlogo">
                 <Text style="font-size: 90px; font-family: Geometr415 Blk BT;">Contact</Text>
