--- a/index.html
+++ b/index.html
@@ -145,25 +145,24 @@
               </g>
             </svg>
         </div>
-
       </div>
-        <!-- <div class="uiorder">
+        <div class="uiorder">
           <div>
-              <svg xmlns="http://www.w3.org/2000/svg" width="530.232" height="305.394" viewBox="0 0 530.232 305.394">
+            <Text>UI/UX<br> Design</Text>
+              <svg xmlns="http://www.w3.org/2000/svg"viewBox="0 0 530.232 305.394">
                 <g id="Group_131" data-name="Group 131" transform="translate(-100 -6318)">
                   <circle id="Ellipse_9" data-name="Ellipse 9" cx="152.5" cy="152.5" r="152.5" transform="translate(100 6318)" fill="#000541"/>
                   <path id="Path_6" data-name="Path 6" d="M152.7,0A152.7,152.7,0,1,1,0,152.7,152.7,152.7,0,0,1,152.7,0Z" transform="translate(324.839 6318)" fill="#5e8255"/>
                 </g>
               </svg>
-              <p style="font-size: 65px; font-family: showcard gothic; color:#fff;position: absolute; left :230px; text-align: center">UI/UX<br> Design</p>
           </div>
           <img src="uix2.png" alt="ui/ux">
         </div>
 
-        <div class="webd">
+        <!-- <div class="webd">
           <img src="lapy.png" alt="webd">
           <div>
-            <p><Text style="font-size: 130px; color: #180D50">WEB</Text><br> DEVELOPMENT</p>    
+            <p><Text>WEB</Text><br> DEVELOPMENT</p>    
             <svg xmlns="http://www.w3.org/2000/svg" width="300" height="25" viewBox="0 0 300 25">
               <defs>
                 <filter id="f1" x="0" y="0">
@@ -172,12 +171,10 @@
               </defs>
               <ellipse id="Ellipse_10" data-name="Ellipse 10" cx="150" cy="12.5"   rx="150" ry="12.5" fill="#CCCCCC"/>
             </svg>
+          </div>
         </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="pcbd">
+</div> -->
+    <!-- <div class="pcbd">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="516.46" height="555.823" viewBox="0 0 516.46 555.823">
         <defs>
           <linearGradient id="linear-gradient" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
@@ -214,7 +211,7 @@
         <img src="Rke cartoon.png" alt="cartoonized photo of roorkee">
       </div>
 
-    </div> -->
+    </div>  -->
 
 
 
