--- a/index.html
+++ b/index.html
@@ -159,23 +159,22 @@
           <img src="uix2.png" alt="ui/ux">
         </div>
 
-        <!-- <div class="webd">
+        <div class="webd">
           <img src="lapy.png" alt="webd">
           <div>
-            <p><Text>WEB</Text><br> DEVELOPMENT</p>    
-            <svg xmlns="http://www.w3.org/2000/svg" width="300" height="25" viewBox="0 0 300 25">
+            <Text>WEB</Text><p>DEVELOPMENT</p>    
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="300" height="25" viewBox="0 0 300 25">
               <defs>
                 <filter id="f1" x="0" y="0">
                   <feGaussianBlur in="SourceGraphic" stdDeviation="100" />
                 </filter>
               </defs>
               <ellipse id="Ellipse_10" data-name="Ellipse 10" cx="150" cy="12.5"   rx="150" ry="12.5" fill="#CCCCCC"/>
-            </svg>
+            </svg> -->
           </div>
         </div>
-</div> -->
-    <!-- <div class="pcbd">
-      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="516.46" height="555.823" viewBox="0 0 516.46 555.823">
+     <div class="pcbd">
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 516.46 555.823">
         <defs>
           <linearGradient id="linear-gradient" x1="0.5" x2="0.5" y2="1" gradientUnits="objectBoundingBox">
             <stop offset="0" stop-color="#007500"/>
@@ -205,13 +204,12 @@
       
       <img src="pcbd.png" alt="PCBd">
       </div>
-
-      <div class="spark">
+     <div class="spark">
         <img src="Spark filter.png" alt="SparkAR filter">
-        <img src="Rke cartoon.png" alt="cartoonized photo of roorkee">
+        <img id="cartoon" src="Rke cartoon.png" alt="cartoonized photo of roorkee">
       </div>
 
-    </div>  -->
+    </div> 
 
 
 
