--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
 
 
 
-    <!-- <div class="page5" id="contact">
+    <div class="page5" id="contact">
         <div class="ul">
           <div class="conlogo">
-                <Text style="font-size: 90px; font-family: Geometr415 Blk BT;">Contact</Text>
+                <Text>Contact</Text>
                 <svg  xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 734.528 730.921">
                     <defs>
                       <style>
@@ -247,16 +247,14 @@
                       <ellipse id="Ellipse_5" data-name="Ellipse 5" class="cls-2" cx="270.494" cy="230.057" rx="270.494" ry="230.057" transform="translate(59.017 64.481)"/>
                     </g>
                 </svg>
-          </div>
-         
+          </div>          
           <ul>
             <li><a class="tab" href="#top">Home</a></li>
             <li><a class="tab" href="#about">About</a></li>
             <li><a class="tab" href="#project">Project</a></li>
             <li><a class="tab" href="#work">Work</a></li>
             <li><a class="tab" href="#contact">Contact</a></li>
-          </ul>
-         
+          </ul>    
         </div>     
         <div class="foot">
             <footer></footer>
@@ -265,7 +263,7 @@
             </rect>
             <line></line>
         </div>
-        <div class="conicon">
+        <!-- <div class="conicon">
 
           <img src="whatsapp.png" alt="whatsapp" style="height: 100px; position: absolute; top:120px; left:135px">
           <a href="https://www.instagram.com/mkmukulkumar">
@@ -284,8 +282,8 @@
           <a href="https://www.linkedin.com/in/mukul-kumar-a42675196/">
             <img src="linkedin.png" alt="linkedin"  style=" position: absolute; top:78.2px; left:294.2px">
           </a>  
-        </div>
-    </div> -->
+        </div> -->
+    </div>
     </body>
 </html>
 
