--- a/index.html
+++ b/index.html
@@ -258,11 +258,32 @@
         </div>     
         <div class="foot">
             <footer></footer>
+            <div class="conicon">
+              <a href="https://www.facebook.com/mukulkumar258">
+                <img src="fb.png" alt="facebook"  >
+              </a> 
+              <img src="twitter.png" alt="twitter" >
+              <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mukulkumar258@gmail.com">
+                <img src="mail.png" alt="gmail" >
+              </a>
+              <a href="https://github.com/mkmukulkumar">
+                <img src="github.png" alt="github" >
+              </a>
+              <img src="whatsapp.png" alt="whatsapp" >
+             
+              <a href="https://www.instagram.com/mkmukulkumar">
+                <img src="insta.png" alt="insta" >
+              </a>
+              <a href="https://www.linkedin.com/in/mukul-kumar-a42675196/">
+                <img src="linkedin.png" alt="linkedin" >
+              </a>  
+          </div>
             <rect>
               <Text>Designed and built by MUKUL KUMAR</Text>
             </rect>
             <line></line>
         </div>
+       
         <!-- <div class="conicon">
 
           <img src="whatsapp.png" alt="whatsapp" style="height: 100px; position: absolute; top:120px; left:135px">
