--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <Text style="font-size: 4vmax; margin-right: 2vmin;">I am</Text>
                 <Text style="font-size: 4vmax ; color: #FFA200;">MUKUL KUMAR</Text>
             </div>
-            <Text style="font-size: 1.5vmax; font-family: Georgia, 'Times New Roman', Times, serif;font-weight: 100;">Creating Ideas into Innovations</Text>
+            <Text style="font-size: 1.5vmax; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;font-weight: 300;">Creating Ideas into Innovations</Text>
         </intro>
         <img class="cartoonized" src="cartoonized.png">
     </div>
@@ -135,8 +135,8 @@
             </g>
           </svg>
           <div>
-            <Text>APP</Text>
-            <Text>DEVELOPMENT</Text>
+          <Text>APP</Text>
+          <Text>DEVELOPMENT</Text> 
           </div>
             <svg xmlns="http://www.w3.org/2000/svg" style="transform:rotate(180deg)"  viewBox="0 0 460.42 163">
               <g id="Group_129" data-name="Group 129" transform="translate(-1957 -6033)">
@@ -145,6 +145,7 @@
               </g>
             </svg>
         </div>
+      
       </div>
         <div class="uiorder">
           <div>
