--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li><a class="tab" href="#top">Home</a></li>
             <li><a class="tab" href="#about">About</a></li>
             <li><a class="tab" href="#project">Project</a></li>
-            <li><a class="tab" href="#work">Work</a></li>
+            <li><a class="tab" href="#work">Expertise</a></li>
             <li><a class="tab" href="#contact">Contact</a></li>
         </ul> 
     </header>
@@ -121,7 +121,7 @@
 
     <div class="page4" id="work">   
       <div class="wkheading">
-        <Text>Work</Text>
+        <Text>Expertise</Text>
         <line></line>
       </div>
 
@@ -245,7 +245,7 @@
             <li><a class="tab" href="#top">Home</a></li>
             <li><a class="tab" href="#about">About</a></li>
             <li><a class="tab" href="#project">Project</a></li>
-            <li><a class="tab" href="#work">Work</a></li>
+            <li><a class="tab" href="#work">Expertise</a></li>
             <li><a class="tab" href="#contact">Contact</a></li>
           </ul>    
         </div>     
