--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a class="tab" href="#top">Home</a></li>
             <li><a class="tab" href="#about">About</a></li>
-            <li><a class="tab" href="#project">Project</a></li>
+            <li><a class="tab" href="#project">Projects</a></li>
             <li><a class="tab" href="#work">Expertise</a></li>
             <li><a class="tab" href="#contact">Contact</a></li>
         </ul> 
@@ -244,7 +244,7 @@
           <ul>
             <li><a class="tab" href="#top">Home</a></li>
             <li><a class="tab" href="#about">About</a></li>
-            <li><a class="tab" href="#project">Project</a></li>
+            <li><a class="tab" href="#project">Projects</a></li>
             <li><a class="tab" href="#work">Expertise</a></li>
             <li><a class="tab" href="#contact">Contact</a></li>
           </ul>    
